--- a/html/composer.json
+++ b/html/composer.json
@@ -36,7 +36,8 @@
         "magento/module-swatches-sample-data": "100.0.*",
         "magento/sample-data-media": "100.0.*",
         "magento/module-offline-shipping-sample-data": "100.0.*",
-        "snowdog/frontools": "^0.8.0"
+        "snowdog/frontools": "^0.8.0",
+        "snowdog/theme-blank-sass": "^0.5.2"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.0",
